--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -20,6 +21,7 @@
     "mongoose": "^8.4.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.2",
+    "server": "file:",
     "winston": "^3.13.0"
   }
 }
